[gd_scene load_steps=4 format=3 uid="uid://qu6y4s6xtj7u"]

[ext_resource type="PackedScene" uid="uid://ct481etkiwsqy" path="res://scenes/menu/menu.tscn" id="1_6u34o"]
[ext_resource type="Script" path="res://scenes/game/root_scene.gd" id="1_spqb2"]
[ext_resource type="AudioStream" uid="uid://bkcniah34rlc2" path="res://sound/main_song.wav" id="3_1fegd"]

[node name="root_scene" type="Node2D"]
script = ExtResource("1_spqb2")

[node name="menu_root" parent="." instance=ExtResource("1_6u34o")]

[node name="audio_player" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[node name="main_audio_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1fegd")
volume_db = -8.0
